--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -411,7 +411,7 @@ h6 {
 #hero .btn-get-started {
   font-family: "Jost", sans-serif;
   font-weight: 500;
-  font-size: 16px;
+  font-size: 24px;
   letter-spacing: 1px;
   display: inline-block;
   padding: 10px 28px 11px 28px;
@@ -1826,4 +1826,8 @@ section {
   #footer .credits {
     padding-top: 4px;
   }
+}
+
+.modal-dialog {
+  margin-top: 200px; /* Increase this value to position the modal lower */
 }
