--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 a {
-  color: #47b2e4;
+  color: #DAA52;
   text-decoration: none;
 }
 
@@ -44,7 +44,7 @@ h6 {
   bottom: 0;
   z-index: 9999;
   overflow: hidden;
-  background: #37517e;
+  background: #000;
 }
 
 #preloader:before {
@@ -52,7 +52,7 @@ h6 {
   position: fixed;
   top: calc(50% - 30px);
   left: calc(50% - 30px);
-  border: 6px solid #37517e;
+  border: 6px solid #000;
   border-top-color: #fff;
   border-bottom-color: #fff;
   border-radius: 50%;
@@ -81,7 +81,7 @@ h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #47b2e4;
+  background: #DAA520;
   width: 40px;
   height: 40px;
   border-radius: 50px;
@@ -182,7 +182,7 @@ h6 {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover>a {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .navbar .getstarted,
@@ -192,14 +192,14 @@ h6 {
   border-radius: 50px;
   color: #fff;
   font-size: 14px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #DAA520;
   font-weight: 600;
 }
 
 .navbar .getstarted:hover,
 .navbar .getstarted:focus:hover {
   color: #fff;
-  background: #31a9e1;
+  background: #FFD700;
 }
 
 .navbar .dropdown ul {
@@ -237,7 +237,7 @@ h6 {
 .navbar .dropdown ul a:hover,
 .navbar .dropdown ul .active:hover,
 .navbar .dropdown ul li:hover>a {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .navbar .dropdown:hover>ul {
@@ -331,19 +331,19 @@ h6 {
 .navbar-mobile a:focus {
   padding: 10px 20px;
   font-size: 15px;
-  color: #37517e;
+  color: #000;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover>a {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .navbar-mobile .getstarted,
 .navbar-mobile .getstarted:focus {
   margin: 15px;
-  color: #37517e;
+  color: #000;
 }
 
 .navbar-mobile .dropdown ul {
@@ -373,7 +373,7 @@ h6 {
 .navbar-mobile .dropdown ul a:hover,
 .navbar-mobile .dropdown ul .active:hover,
 .navbar-mobile .dropdown ul li:hover>a {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .navbar-mobile .dropdown>.dropdown-active {
@@ -387,7 +387,7 @@ h6 {
 #hero {
   width: 100%;
   height: 80vh;
-  background: #37517e;
+  background: #000;
 }
 
 #hero .container {
@@ -399,11 +399,11 @@ h6 {
   font-size: 48px;
   font-weight: 700;
   line-height: 56px;
-  color: #fff;
+  color: #DAA520;
 }
 
 #hero h2 {
-  color: rgba(255, 255, 255, 0.6);
+  color: #FFFFFF;
   margin-bottom: 50px;
   font-size: 24px;
 }
@@ -419,11 +419,11 @@ h6 {
   transition: 0.5s;
   margin: 10px 0 0 0;
   color: #fff;
-  background: #47b2e4;
+  background: #DAA520;
 }
 
 #hero .btn-get-started:hover {
-  background: #209dd8;
+  background: #FFD700;
 }
 
 #hero .btn-watch-video {
@@ -445,7 +445,7 @@ h6 {
 }
 
 #hero .btn-watch-video:hover i {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 #hero .animated {
@@ -537,7 +537,7 @@ section {
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
-  color: #37517e;
+  color: #000;
 }
 
 .section-title h2::before {
@@ -557,7 +557,7 @@ section {
   display: block;
   width: 40px;
   height: 3px;
-  background: #47b2e4;
+  background: #DAA520;
   bottom: 0;
   left: calc(50% - 20px);
 }
@@ -620,7 +620,7 @@ section {
   left: 0;
   top: 2px;
   font-size: 20px;
-  color: #47b2e4;
+  color: #DAA520;
   line-height: 1;
 }
 
@@ -638,14 +638,14 @@ section {
   border-radius: 4px;
   transition: 0.3s;
   line-height: 1;
-  color: #47b2e4;
+  color: #DAA520;
   animation-delay: 0.8s;
   margin-top: 6px;
-  border: 2px solid #47b2e4;
+  border: 2px solid #DAA520;
 }
 
 .about .content .btn-learn-more:hover {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
   text-decoration: none;
 }
@@ -660,7 +660,7 @@ section {
 .why-us .content h3 {
   font-weight: 400;
   font-size: 34px;
-  color: #37517e;
+  color: #000;
 }
 
 .why-us .content h4 {
@@ -712,7 +712,7 @@ section {
 }
 
 .why-us .accordion-list span {
-  color: #47b2e4;
+  color: #DAA520;
   font-weight: 600;
   font-size: 18px;
   padding-right: 10px;
@@ -739,7 +739,7 @@ section {
 }
 
 .why-us .accordion-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .why-us .accordion-list a.collapsed .icon-show {
@@ -785,7 +785,7 @@ section {
 .skills .content h3 {
   font-weight: 700;
   font-size: 32px;
-  color: #37517e;
+  color: #000;
   font-family: "Poppins", sans-serif;
 }
 
@@ -801,7 +801,7 @@ section {
 .skills .content ul i {
   font-size: 20px;
   padding-right: 4px;
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .skills .content p:last-child {
@@ -822,7 +822,7 @@ section {
   display: block;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
-  color: #37517e;
+  color: #000;
 }
 
 .skills .progress .skill .val {
@@ -857,7 +857,7 @@ section {
 }
 
 .services .icon-box .icon i {
-  color: #47b2e4;
+  color: #DAA520;
   font-size: 36px;
   transition: 0.3s;
 }
@@ -869,7 +869,7 @@ section {
 }
 
 .services .icon-box h4 a {
-  color: #37517e;
+  color: #000;
   transition: ease-in-out 0.3s;
 }
 
@@ -884,7 +884,7 @@ section {
 }
 
 .services .icon-box:hover h4 a {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 /*--------------------------------------------------------------
@@ -921,8 +921,8 @@ section {
 }
 
 .cta .cta-btn:hover {
-  background: #47b2e4;
-  border: 2px solid #47b2e4;
+  background: #DAA520;
+  border: 2px solid #DAA520;
 }
 
 @media (max-width: 1024px) {
@@ -963,7 +963,7 @@ section {
 
 .portfolio #portfolio-flters li:hover,
 .portfolio #portfolio-flters li.filter-active {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
 }
 
@@ -1017,7 +1017,7 @@ section {
 
 .portfolio .portfolio-item .portfolio-info .preview-link:hover,
 .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .portfolio .portfolio-item .portfolio-info .details-link {
@@ -1053,11 +1053,11 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #47b2e4;
+  border: 1px solid #DAA520;
 }
 
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #47b2e4;
+  background-color: #DAA520;
 }
 
 .portfolio-details .portfolio-info {
@@ -1132,7 +1132,7 @@ section {
   font-weight: 700;
   margin-bottom: 5px;
   font-size: 20px;
-  color: #37517e;
+  color: #000;
 }
 
 .team .member span {
@@ -1178,13 +1178,13 @@ section {
 }
 
 .team .member .social a i {
-  color: #37517e;
+  color: #000;
   font-size: 16px;
   margin: 0 2px;
 }
 
 .team .member .social a:hover {
-  background: #47b2e4;
+  background: #DAA520;
 }
 
 .team .member .social a:hover i {
@@ -1215,12 +1215,12 @@ section {
   font-weight: 500;
   margin-bottom: 15px;
   font-size: 20px;
-  color: #37517e;
+  color: #000;
 }
 
 .pricing h4 {
   font-size: 48px;
-  color: #37517e;
+  color: #000;
   font-weight: 400;
   font-family: "Jost", sans-serif;
   margin-bottom: 25px;
@@ -1231,7 +1231,7 @@ section {
 }
 
 .pricing h4 span {
-  color: #47b2e4;
+  color: #DAA520;
   font-size: 18px;
   display: block;
 }
@@ -1273,26 +1273,26 @@ section {
   display: inline-block;
   padding: 12px 35px;
   border-radius: 50px;
-  color: #47b2e4;
+  color: #DAA520;
   transition: none;
   font-size: 16px;
   font-weight: 500;
   font-family: "Jost", sans-serif;
   transition: 0.3s;
-  border: 1px solid #47b2e4;
+  border: 1px solid #DAA520;
 }
 
 .pricing .buy-btn:hover {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
 }
 
 .pricing .featured {
-  border-top-color: #47b2e4;
+  border-top-color: #DAA520;
 }
 
 .pricing .featured .buy-btn {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
 }
 
@@ -1361,7 +1361,7 @@ section {
   position: absolute;
   right: 0;
   left: 20px;
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .faq .faq-list .icon-show,
@@ -1382,12 +1382,12 @@ section {
 }
 
 .faq .faq-list a.collapsed {
-  color: #37517e;
+  color: #000;
   transition: 0.3s;
 }
 
 .faq .faq-list a.collapsed:hover {
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 .faq .faq-list a.collapsed .icon-show {
@@ -1408,8 +1408,8 @@ section {
 # Contact
 --------------------------------------------------------------*/
 .contact .info {
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #DAA520;
+  border-bottom: 3px solid #DAA520;
   padding: 30px;
   background: #fff;
   width: 100%;
@@ -1418,7 +1418,7 @@ section {
 
 .contact .info i {
   font-size: 20px;
-  color: #47b2e4;
+  color: #DAA520;
   float: left;
   width: 44px;
   height: 44px;
@@ -1435,7 +1435,7 @@ section {
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
-  color: #37517e;
+  color: #000;
 }
 
 .contact .info p {
@@ -1469,21 +1469,21 @@ section {
 }
 
 .contact .info .social-links a:hover {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
 }
 
 .contact .info .email:hover i,
 .contact .info .address:hover i,
 .contact .info .phone:hover i {
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
 }
 
 .contact .php-email-form {
   width: 100%;
-  border-top: 3px solid #47b2e4;
-  border-bottom: 3px solid #47b2e4;
+  border-top: 3px solid #DAA520;
+  border-bottom: 3px solid #DAA520;
   padding: 30px;
   background: #fff;
   box-shadow: 0 0 24px 0 rgba(0, 0, 0, 0.12);
@@ -1560,7 +1560,7 @@ section {
 
 .contact .php-email-form input:focus,
 .contact .php-email-form textarea:focus {
-  border-color: #47b2e4;
+  border-color: #DAA520;
 }
 
 .contact .php-email-form input {
@@ -1572,7 +1572,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit] {
-  background: #47b2e4;
+  background: #DAA520;
   border: 0;
   padding: 12px 34px;
   color: #fff;
@@ -1581,7 +1581,7 @@ section {
 }
 
 .contact .php-email-form button[type=submit]:hover {
-  background: #209dd8;
+  background: #FFD700;
 }
 
 @keyframes animate-loading {
@@ -1613,7 +1613,7 @@ section {
 .breadcrumbs h2 {
   font-size: 28px;
   font-weight: 600;
-  color: #37517e;
+  color: #000;
 }
 
 .breadcrumbs ol {
@@ -1641,7 +1641,7 @@ section {
 --------------------------------------------------------------*/
 #footer {
   font-size: 14px;
-  background: #37517e;
+  background: #000;
 }
 
 #footer .footer-newsletter {
@@ -1658,7 +1658,7 @@ section {
   padding: 0;
   line-height: 1;
   font-weight: 600;
-  color: #37517e;
+  color: #000;
 }
 
 #footer .footer-newsletter form {
@@ -1686,7 +1686,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
   transition: 0.3s;
   border-radius: 50px;
@@ -1694,7 +1694,7 @@ section {
 }
 
 #footer .footer-newsletter form input[type=submit]:hover {
-  background: #209dd8;
+  background: #FFD700;
 }
 
 #footer .footer-top {
@@ -1713,7 +1713,7 @@ section {
   line-height: 1;
   text-transform: uppercase;
   font-weight: 600;
-  color: #37517e;
+  color: #000;
 }
 
 #footer .footer-top .footer-contact p {
@@ -1727,7 +1727,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #37517e;
+  color: #000;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1744,7 +1744,7 @@ section {
 
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #47b2e4;
+  color: #DAA520;
   font-size: 18px;
   line-height: 1;
 }
@@ -1768,13 +1768,13 @@ section {
 
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
-  color: #47b2e4;
+  color: #DAA520;
 }
 
 #footer .footer-top .social-links a {
   font-size: 18px;
   display: inline-block;
-  background: #47b2e4;
+  background: #DAA520;
   color: #fff;
   line-height: 1;
   padding: 8px 0;
@@ -1787,7 +1787,7 @@ section {
 }
 
 #footer .footer-top .social-links a:hover {
-  background: #209dd8;
+  background: #FFD700;
   color: #fff;
   text-decoration: none;
 }
